Allow the server to modify the dataset by creating new event types from patterns